# global_intersection_analysis_sgi2024

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  simulate.cpp
